--- a/environments/default.yaml
+++ b/environments/default.yaml
@@ -160,3 +160,8 @@ overrides:
       create: true
       viewerCreate: true
       viewerGroupName: oidc:users
+  
+  unbind:
+    operator:
+      repository: unbindapp/unbind-operator
+      tag: latest
