--- a/environments/default.yaml
+++ b/environments/default.yaml
@@ -16,6 +16,8 @@ components:
     enabled: true
   database:
     enabled: true
+  valkey:
+    enabled: true
   alloy:
     enabled: true
   loki:
@@ -67,7 +69,7 @@ overrides:
         port: 80
         # namespace: // Defaults to global.namespace
   loki:
-    retentionPeriod: 168h // 7 days
+    retentionPeriod: 168h
     storageSize: 5Gi
     minioStorageSize: 5Gi
   
@@ -165,3 +167,297 @@ overrides:
     operator:
       repository: unbindapp/unbind-operator
       tag: latest
+
+# environments/default.yaml
+# Default environment settings
+
+global:
+  baseDomain: example.com
+  namespace: unbind-system
+
+components:
+  longhorn:
+    enabled: false
+  kubePrometheusStack:
+    enabled: true
+  buildkitd:
+    enabled: true
+  postgresOperator:
+    enabled: true
+  database:
+    enabled: true
+  valkey:
+    enabled: true
+  alloy:
+    enabled: true
+  loki:
+    enabled: true
+  registry:
+    enabled: true
+  dex:
+    enabled: true
+  ingressNginx:
+    enabled: true
+  certManager:
+    enabled: true
+  kubeOidcProxy:
+    enabled: true
+  # Add the unbind-app component
+  unbindApp:
+    enabled: true
+  unbindOperator:
+    enabled: true
+
+overrides:
+  longhorn:
+    persistence:
+      defaultClass: true
+      defaultClassReplicaCount: 1
+      reclaimPolicy: Retain
+    defaultSettings:
+      defaultReplicaCount: 1
+  kubePrometheusStack:
+    # Configurable retention period
+    retention: "7d"
+    # Configurable storage size
+    storage: "5Gi"
+  buildkitd:
+    image: moby/buildkit:v0.20.2-rootless
+    replicas: 1
+    maxParallism: 2
+  postgresOperator:
+    spiloImage: unbindapp/spilo:17
+  database:
+    replicaCount: 1
+    storage: "5Gi"
+    resources:
+      requests:
+        cpu: 100m
+        memory: 100Mi
+      limits:
+        cpu: 512m
+        memory: 1Gi
+  alloy:
+    loki:
+      endpoint:
+        host: loki-unbind-gateway
+        port: 80
+        # namespace: // Defaults to global.namespace
+  loki:
+    retentionPeriod: 168h
+    storageSize: 5Gi
+    minioStorageSize: 5Gi
+  
+  registry:
+    replicaCount: 1
+    persistence:
+      size: 5Gi
+    service:
+      nodePort: 31571
+    cleanup:
+      threshold: 4Gi # This should be around 80% of the total size, this is for the auto cleanup job
+
+  certManager:
+    replicaCount: 2
+
+  dex:
+    version: "v2.42.0"
+    replicaCount: 2
+    # No need to specify issuer as it will be auto-generated from baseDomain
+    
+    # PostgreSQL configuration
+    postgres:
+      host: "pg-unbind.unbind-system"
+      port: 5432
+      database: "dex"
+      user: "dex_user"
+      # The secret name that contains the PostgreSQL password
+      secretName: "dex.pg-unbind.credentials.postgresql.acid.zalan.do"
+      ssl:
+        mode: "disable"
+    
+    # OAuth2 settings
+    oauth2:
+      skipApprovalScreen: true
+      alwaysIssueOfflineToken: true
+      responseTypes:
+        - code
+    
+    # Token expiry settings
+    expiry:
+      idTokens: "1h"
+      accessTokens: "1h"
+      refreshTokens:
+        validIfNotUsedFor: "336h"
+        disableRotation: true
+    
+    # Ingress settings - the host is now derived from baseDomain
+    ingress:
+      enabled: true
+      className: "nginx"
+      certIssuer: "letsencrypt-prod"
+    
+    # TLS settings
+    tls:
+      secretName: "dex-tls"
+    
+    # Resource settings
+    resources:
+      requests:
+        cpu: "100m"
+        memory: "128Mi"
+      limits:
+        cpu: "200m"
+        memory: "256Mi"
+
+  kubeOidcProxy:
+    replicaCount: 2
+    image:
+      repository: unbindapp/kube-oidc-proxy
+      tag: master-13812109543
+      pullPolicy: Always
+    oidc:
+      issuerUrl: https://dex.unbind.app  # Will be templated with baseDomain in helmfile
+      clientId: unbind-api
+      usernameClaim: email
+      groupsClaim: groups
+      tlsSecretName: dex-tls
+    service:
+      type: ClusterIP
+      port: 443
+      targetPort: 443
+    resources:
+      requests:
+        cpu: 100m
+        memory: 128Mi
+      limits:
+        cpu: 300m
+        memory: 256Mi
+    rbac:
+      create: true
+      viewerCreate: true
+      viewerGroupName: oidc:users
+  
+  unbind:
+    # Unbind operator settings
+    operator:
+      repository: unbindapp/unbind-operator
+      tag: latest
+
+    # UI Configuration
+    ui:
+      repository: unbindapp/unbind-ui
+      tag: latest
+      pullPolicy: Always
+      replicaCount: 2
+      # Additional settings for UI
+      dex:
+        clientId: unbind-api
+        secretName: dex-client-secrets
+        secretKey: unbind-api-secret
+      livenessProbe:
+        initialDelaySeconds: 30
+        periodSeconds: 10
+      readinessProbe:
+        initialDelaySeconds: 30
+        periodSeconds: 10
+        requests:
+          cpu: 100m
+          memory: 200Mi
+        limits:
+          cpu: 250m
+          memory: 512Mi
+
+    # API Configuration
+    api:
+      repository: unbindapp/unbind-api
+      tag: latest
+      pullPolicy: Always
+      replicaCount: 2
+      serviceDefVersion: v0.1.20
+      # Database configuration for API
+      database:
+        host: pg-unbind
+        port: 5432
+        name: unbind
+        user: unbind
+        secretName: unbind.pg-unbind.credentials.postgresql.acid.zalan.do
+      # Dex auth configuration for API
+      dex:
+        issuerUrl: https://dex.example.com
+        issuerUrlExternal: https://dex.example.com
+        clientId: unbind-api
+        secretName: dex-client-secrets
+        secretKey: unbind-api-secret
+      # Valkey Redis configuration
+      valkey:
+        url: valkey-headless.unbind-system:6379
+      # Kube proxy configuration
+      kubeProxyUrl: https://kube-oidc-proxy.unbind-system.svc.cluster.local:443
+      # Builder configuration
+      buildImager: unbindapp/unbind-builder:latest
+      # Registry configuration
+      registry:
+        host: docker-registry.unbind-system:5000
+        password: "TODO"
+      # Buildkit configuration
+      buildkit:
+        host: tcp://buildkitd.unbind-system:1234
+      # Logging and monitoring
+      loki:
+        endpoint: http://loki-unbind-gateway.unbind-system.svc.cluster.local
+      prometheus:
+        endpoint: http://kube-prometheus-stack-prometheus.unbind-system:9090
+      # Health check configuration
+      livenessProbe:
+        initialDelaySeconds: 30
+        periodSeconds: 10
+      readinessProbe:
+        initialDelaySeconds: 30
+        periodSeconds: 10
+      resources:
+        requests:
+          cpu: 100m
+          memory: 200Mi
+        limits:
+          cpu: 250m
+          memory: 512Mi
+
+    # Auth Service Configuration
+    auth:
+      repository: unbindapp/unbind-api
+      tag: latest
+      pullPolicy: Always
+      replicaCount: 2
+      # Database configuration for Auth
+      database:
+        host: pg-unbind
+        port: 5432
+        user: unbind
+        secretName: unbind.pg-unbind.credentials.postgresql.acid.zalan.do
+      # Dex auth configuration for Auth service
+      dex:
+        issuerUrl: https://dex.example.com
+        issuerUrlExternal: https://dex.example.com
+        clientId: unbind-api
+        secretName: dex-client-secrets
+        secretKey: unbind-api-secret
+      # Valkey Redis configuration
+      valkey:
+        url: valkey-headless.unbind-system:6379
+      # Health check configuration
+      livenessProbe:
+        path: /health
+        initialDelaySeconds: 30
+        periodSeconds: 10
+      readinessProbe:
+        path: /health
+        initialDelaySeconds: 30
+        periodSeconds: 10
+      resources:
+        requests:
+          cpu: 100m
+          memory: 200Mi
+        limits:
+          cpu: 250m
+          memory: 512Mi
