--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -56,10 +56,23 @@ releases:
     chart: prometheus-community/kube-prometheus-stack
     version: 70.4.0 
     hooks:
-    - events: ["presync"]
-      showlogs: true
-      command: "sh"
-      args: ["-c", "kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/refs/tags/v0.81.0/example/prometheus-operator-crd/* && sleep 10"]
+      - events: ["presync"]
+        showlogs: true
+        command: "sh"
+        args: 
+          - -c
+          - |
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagerconfigs.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_podmonitors.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_probes.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_prometheusagents.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_prometheuses.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_prometheusrules.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_scrapeconfigs.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_servicemonitors.yaml
+            kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.81.0/example/prometheus-operator-crd/monitoring.coreos.com_thanosrulers.yaml
+            sleep 5
     values:
       - values/kube-prometheus-stack.yaml
       - prometheus:
