--- a/charts/registry/templates/deployment.yaml
+++ b/charts/registry/templates/deployment.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: registry
     spec:
+      securityContext:
+        fsGroup: 0
       containers:
         - name: registry
           image: registry:2
@@ -30,7 +32,6 @@ spec:
               mountPath: /var/lib/registry
           securityContext:
             runAsUser: 0
-            fsGroup: 0
       volumes:
         - name: registry-storage
           persistentVolumeClaim:
